syntax = "proto3";

package auth;

import "common.proto";

option go_package = "./proto";

// Auth Service
service AuthService {
    rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
    rpc GetUserById (common.UUID) returns (UserResponse);
    rpc GetUserByEmail (GetUserByEmailRequest) returns (UserResponse);
    rpc CreateUser (CreateUserRequest) returns (UserResponse);
    rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
    rpc DeleteUser (common.UUID) returns (common.StatusResponse);
    rpc HealthCheck (common.Empty) returns (HealthCheckResponse);
}

// Request/Response messages
message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    bool valid = 1;
    string userId = 2;
    string email = 3;
    repeated string roles = 4;
    string message = 5;
}

message GetUserByEmailRequest {
    string email = 1;
}

message CreateUserRequest {
    string email = 1;
    string password = 2;
    string name = 3;
    string keycloakId = 4;
}

message UpdateUserRequest {
    string id = 1;
    string email = 2;
    string name = 3;
    bool isActive = 4;
}

message UserResponse {
    string id = 1;
    string email = 2;
    string name = 3;
    string keycloakId = 4;
    bool isActive = 5;
    string createdAt = 6;
    string updatedAt = 7;
}

message HealthCheckResponse {
    string status = 1;
    string timestamp = 2;
    string service = 3;
}
